--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <!-- Modal Section -->
 <section class="email-modal">
-    <div class="email-modal__close-btn" onclick="closeModal">
+    <div class="email-modal__close-btn">
         <i class="gg-close"></i>
     </div>
     <div class="email-modal__container">
@@ -41,24 +41,27 @@
                 Bhad Sneakers
             </div>
             <h2 style="padding-bottom: 10px;">Don't miss this chance to save 80%!</h2>
-            <h3 style="padding-bottom: 25px;"> Amazing quality at amazing prices!</h3>
+            <h3 style="padding-bottom: 25px;"> Amazing quality at great prices!</h3>
             <div class="email-modal__invalid-message"><p>This is an invalid email address. Please try again.</p></div>
             <form class="email-modal__form-group">
                 <input type="email" placeholder="Enter your email address" class="email-modal__input-field"></input>
-                <button type="button" class="email-modal__button" onclick="validateEmail">Submit</button>
+                <button type="button" class="email-modal__button">Submit</button>
             </form>
             <!--Declines offer-->
-            <div class="email-modal__decline-offer">I'm not interested in saving money</div>
+            <div class="email-modal__decline-offer">I'm not interested in saving money on quality sneakers!</div>
         
         </div>
+        <!-- Column 2 -->
         <div class="email-modal__image-column">
             <img class="email-modal__image" src="./img/fake-jordans.jpg" alt="Bhad Sneakers"/>
         </div>
+        <!-- Thank You Message -->
         <div class="email-thankyou">
             <div class="email-thankyou__title">
+                <div class="email-thankyou__sneaker-emoji">👟</div>
                 Thank You!
             </div>
-            <p class="email-thankyou__msg">You're on your way to great savings! Check your inbox for the coupon code.</p>
+            <p class="email-thankyou__msg">You're on your way to awesome savings! Check your inbox for the coupon code.</p>
         </div>
     </div>
 
