--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 Thank You!
             </div>
             <p class="email-thankyou__msg">You're on your way to awesome savings! Check your inbox for the coupon code.</p>
+            <div id="email-thankyou__countdown"></div>
         </div>
     </div>
 
